# TCF

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  INDEX.md  LICENSE  MAP.md  README.md  README.pt-BR.md  ROADMAP.md  STATUS.md  hatch_build.py  pyproject.toml
.claude/workflows/: h-perf-06-v2-fase-a.js
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
archive/misc/: print_consolidated.py
config/: .gitignore  api_keys.json.example  storage.json.example
data/: metadata.json  pessoas.csv  produtos.csv  vendas.csv
data-local/: README.md
datasets/: README.md  coverage-matrix.md
datasets/quality-reports/: adult-census.md  tpch-sf001.md
datasets/questions/: adult-census.json  tpch-sf001.json
datasets/synthetic/: D10-datas-mundiais.csv  D11-datetime-precisao.csv  D11a-datas-dia.csv  D11b-datas-borda.csv  D11c-datas-mensal.csv  D11d-datetime-min.csv  D11e-datetime-mensal.csv  D11f-datetime-ms.csv  D11g-datetime-us.csv  D11h-datetime-ns.csv  D11i-datas-mensal-com-correcao.csv  D11j-datetime-tz-Z.csv  D11k-datetime-tz-offset.csv  D11m-datetime-tz-variavel.csv  D12-datetime-timezone.csv  D13-cpf-variados.csv  D14-uuid-variados.csv  D15-base64-variados.csv  D16a-ids-3digits.csv  D16b-ids-4digits.csv  D16c-ids-prefixados.csv  README.md
docs/: ARCHITECTURE.md  ARTICLE.md  CONSOLIDATED_SCIENCE.md  EXPERIMENT_DESIGN.md  FINDINGS_SUMMARY.md  README.md  SOURCE_MAP.md  TESTS.md  divulgacao-tcf.md  history.md  vocabulary.md
docs/adr/: 0001-tcf-format-shebang.md  0002-vertice-triplice-restricao.md  0003-tripartite-pre-obat-hcc.md  0004-multi-column-header-compacto.md  0005-discoverability-claude-md-root.md  0006-empty-string-decode-fix.md  0007-comma-in-literals-bug.md  0008-detect-cadence-numeric-rule.md  0009-obat-trigram-index-optimization.md  0010-auto-detect-min-len.md  0011-pacote1-weld-canonical.md  0012-diataxis-naming-local.md  0013-multi-column-canonical-api.md  0014-unified-api-side-outputs.md  0015-natures-templated-checked-weld.md  0016-hcc-multi-delta-seq-rle.md  0017-format-spec-v1-frozen.md  0018-v2-format-roadmap.md  0019-hcc-detect-compositions-topk-prune.md  0020-cython-optional-accelerator.md  0021-onedrive-git-corruption-recovery.md  0022-v2a-fallback-identity-weld.md  0023-v2-minimal-header-weld.md  0024-pre-1.0-versioning-git-as-compat.md  0025-v2b-dictionary-categorical-weld.md  0026-structural-split-weld.md  0027-nature-mark-header-self-describing.md  0028-pre-1.0-versioning-minor-format-coupling-release-cadence.md  0029-version-format-identification-semi-implicit.md  0030-freeze-single-col-body-at-1.0.md  0031-hierarchical-discriminator-H.md  0032-tcf8-default-format.md  0033-hierarchical-codec-weld.md  README.md
docs/algorithms/: HCC.en.md  HCC.md  HCC.pt-BR.md  OBAT.en.md  OBAT.md  OBAT.pt-BR.md  README.md  TCF-format.en.md  TCF-format.md  TCF-format.pt-BR.md  core-data-model.md  output-convention.md
docs/architecture/: assembly-overview.md  boundaries.md  data-pipeline.md  overview.md  source-map.md  telemetry.md
docs/article/: 00-innovations.md  01-introduction.md  02-related-work.md  03-tcf-format.md  04-methodology.md  05-results-e1-e2.md  06-results-e3.md  07-results-e4-e8.md  07-results.md  08-discussion.md  09-conclusion.md  README.md
docs/components/: 1-tcf-core.md  2-tcf-llm-interface.md  3-tcf-db-extractor.md  README.md
docs/findings/: 01-origins-Q01-Q12.md  02-linha-b-Q13-Q24.md  README.md  (+3 more)
infra/: docker-compose.yml
llm-benchmark/: README.md
scripts/: _paths.py  analyze_llm_results.py  bench_evidencia.py  bench_evidencia_f2.py  bench_evidencia_f3.py  bench_evidencia_f4.py  bench_evidencia_f4_scale.py  bench_evidencia_probes.py  benchmark_compression.py  benchmark_llm_accuracy.py  benchmark_parallel.py  benchmark_progressive_diagnostic.py  benchmark_stats_ablation.py  compute_ground_truth.py  csv_to_sqlite.py  dataset_reader.py  derive_formats.py  index.py  quality_report.py  run_metadata.py  setup_adult.py  setup_beijing_pm25.py  setup_br_identidades.py  setup_ibge_municipios.py  setup_online_retail.py  setup_receita_cnpj.py  setup_tpch.py  setup_wine_quality.py  spec_demo.py
tests/: conftest.py  test_bench_evidencia.py  test_compression_benchmark.py  test_core_rt.py  test_encode_canonical.py  test_encode_decode.py  test_f0_boundary_fixes.py  test_hcc_multi_delta.py  test_hierarchical_control_synthetics.py  test_hierarchical_rt.py  test_json_flow_parity.py  test_multi_col_rt.py  test_nature_compete.py  test_natures.py  test_natures_compiler.py  test_natures_ip.py  test_p01_p02_p03.py  test_parallel.py  test_pipeline_config.py  test_pyx_byte_equivalence.py  test_real_world_snapshots.py  test_regression_v1_baseline.py  test_schema.py  test_schema_gadget_dates.py  test_schema_gadget_fk.py  test_schema_gadget_quality.py  test_schema_gadget_report.py  test_shaper.py  test_shaper_scientific.py  test_side_outputs.py  test_tcf_lazy.py  test_timing.py
tickets/: BUG-BRACKET-CELL-LOSS.md  BUG-SEQRLE-RANGE-EMPTY-B.md  META-DOCS-V05-OBSOLETE.md  META-ESCAPE-DEDUCTION.md  META-EXP-FORMAT.md  META-NAMING.md  META-PERF-PHASE2.md  META-STRATA-GOVERNANCE.md  META-THEORY-MOVE.md  META-TYPE-ENCODERS.md  README.md  T-API-BOUNDARY-CONTRACTS.md  T-CI-1-github-actions.md  T-CI-2-tests-refactor.md  T-CI-3-pyx-compiled-byte-gate.md  T-CLEAN-1-pre-commit-hooks.md  T-CLEAN-2-strata-defrag.md  T-CLEAN-3-org-defrag-pre-0.8.md  T-CODE-CORE-CONSOLIDATE.md  T-CODE-DESCAPAR-V2B.md  T-CODE-EMPTY-FRAG-INDEX-RT.md  T-CODE-ENCODER-MANAGER.md  T-CODE-H-DA-11c-features-unificadas.md  T-CODE-HCC-ATOM-DETECTION-REFINE.md  T-CODE-HCC-MULTI-DELTA-FIX.md  T-CODE-LAYERED-PIPELINE.md  T-CODE-LAZY-VIEW-PROMOTE.md  T-CODE-LEGACY-PRUNE-PRE-07.md  T-CODE-OUTPUT-SINKS.md  T-CODE-PACOTE1-WELD-CANONICAL.md  T-CODE-PARALLEL-BUDGET.md  T-CODE-PLAN-CONTRACT.md  T-CODE-RT-EDGES.md  T-CODE-SCHEMA-BUILDER.md  T-CODE-TCF8H-JSON-PARITY.md  T-CODE-TCF8H-WELD.md  T-DATA-1-datasets-financeiros-cientificos.md  T-DATA-2-RECEITA-CNPJ.md  T-DATA-3-EDGE-QUALITY-FIXTURES.md  T-DATA-4-TPCH-PART-SAMPLES.md  (+43 more)
(+3342 files in other folders)
