[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tcf"
version = "1.0.0"
description = "TCF (Tabular Compact Format) — string compression via OBAT (Online Bidirectional Affix Tokenizer) + HCC (Hierarchical Compositional Coding)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["tabular", "compression", "encoding", "affix-tokenizer", "compositional-coding", "string-compression"]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pre-commit>=3.5",  # hooks de higiene (T-CLEAN-1, 2026-05-23)
    "ruff>=0.7",        # lint + format (usado via pre-commit + standalone)
    "detect-secrets>=1.5",  # secrets scan (via pre-commit)
]
eval = ["requests>=2.28"]  # for Ollama client (experiments only)

# Datasets tools — for downloading and processing canonical benchmarks
# Install with: pip install -e ".[datasets]"
datasets = [
    "duckdb>=1.0",        # TPC-H generation via tpch extension
    "scikit-learn>=1.3",  # fetch_openml for UCI datasets (Adult, etc)
    "pandas>=2.0",        # DataFrame manipulation
]

# Convenience meta-group: install everything
all = [
    "tcf[dev,eval,datasets]",
]

[tool.pytest.ini_options]
cache_dir = "Z:\\caches\\pytest"
testpaths = ["tests"]
norecursedirs = ["_archive_v05", "fixtures"]
markers = [
    "requires_data: tests that need SQLite hubs in Z:/tcf-data/ (skipped in CI)",
]

[tool.hatchling.build.targets.wheel]
packages = ["src/tcf"]

# v1.0 (2026-05-27, ADR-0017): canonico TCF-CORE vive em src/tcf/
# (OBAT + HCC + natures + pipeline). Wheel empacota src/tcf como modulo
# importavel `tcf`. Codigo v0.5 legado (columnar/RLE pra LLM benchmark)
# permanece em old/tcf/ mas NAO e' empacotado (acessorio historico).
# Sem [project.scripts]: v1.0 e' library-only (`from tcf import encode`);
# CLI do v0.5 (old/tcf/cli.py) nao migrado — fora de escopo v1.
# Future: C extension via hatchling-meson; Rust via maturin (mesmo layout).
