[build-system]
# hatchling: backend. cython + setuptools: usados pelo build hook best-effort
# (hatch_build.py) pra compilar o acelerador opcional src/tcf/_core/detect.pyx
# num subprocess do BUILD ENV ISOLADO (PEP 517).
# setuptools PRECISA estar aqui: o env isolado do build so' tem o que esta' em
# `requires`. Sem ele, o `from setuptools import setup` do hook falha (o
# [dependency-groups].dev NAO entra no env isolado — e' PEP 735, so' dev local),
# o except best-effort engole o erro, e a wheel sai pure-Python EM SILENCIO
# (bug provado 2026-07-05; T-CI-3 / revisao 6-lentes fraqueza #2).
# Se compilador C ausente, o hook AINDA cai pra pure-Python (ADR-0020) — a menos
# que TCF_REQUIRE_ACCEL=1, que faz o build FALHAR alto (ver hatch_build.py).
requires = ["hatchling", "cython>=3.0", "setuptools>=64"]
build-backend = "hatchling.build"

[project]
name = "tcf-format"
version = "0.8.0"
description = "TCF (Tabular Compact Format) — string compression via OBAT (Online Bidirectional Affix Tokenizer) + HCC (Hierarchical Compositional Coding)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["tabular", "compression", "encoding", "affix-tokenizer", "compositional-coding", "string-compression"]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pre-commit>=3.5",  # hooks de higiene (T-CLEAN-1, 2026-05-23)
    "ruff>=0.7",        # lint + format CONTINUO (pre-commit + standalone). [tool.ruff] abaixo.
    "detect-secrets>=1.5",  # secrets scan (via pre-commit)
]
# vulture (dead-code) NAO e' dep: alto falso-positivo numa lib (ruff cobre o
# continuo confiavel). Varredura pontual ad-hoc: `pipx run vulture src/tcf` ou
# `pip install vulture && python -m vulture src/tcf`, cruzando com
# experiments/lab/dirty/notas/dicas-limpeza-dead-code.md (so' agir apos inspecao).
eval = ["requests>=2.28"]  # for Ollama client (llm-benchmark/ harness only)

# Datasets tools — for downloading and processing canonical benchmarks
# Install with: pip install -e ".[datasets]"
datasets = [
    "duckdb>=1.0",        # TPC-H generation via tpch extension
    "scikit-learn>=1.3",  # fetch_openml for UCI datasets (Adult, etc)
    "pandas>=2.0",        # DataFrame manipulation
]

# Convenience meta-group: install everything
all = [
    "tcf-format[dev,eval,datasets]",
]

[tool.ruff]
# Lint CONTINUO (ferramenta confiavel de manutencao). Alinha com
# .pre-commit-config.yaml (ruff-pre-commit v0.7): regras default (E4/E7/E9 + F).
# Codigo experimental/legado fica fora (so' warnings la', nao bloqueia).
# Uso: `python -m ruff check src/tcf` (F = confiavel; E = estilo, avaliar depois).
target-version = "py310"
extend-exclude = ["experiments/lab/dirty", "old", "llm-benchmark", "docs/archive"]

[tool.pytest.ini_options]
cache_dir = "Z:\\caches\\pytest"
testpaths = ["tests"]
norecursedirs = ["_archive_v05", "fixtures"]
markers = [
    "requires_data: tests that need SQLite hubs in Z:/tcf-data/ (skipped in CI)",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tcf"]

# Build hook best-effort do acelerador Cython (ADR-0020). Nunca falha o build.
[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

# sdist enxuto: so' o necessario pra buildar/instalar (pacote + hook + metadata).
# Exclui experiments/, old/ (v0.5 legado), docs/, datasets/ etc. (~18MB) do
# dist publicavel. `exclude` tem precedencia sobre o default VCS do hatchling.
[tool.hatch.build.targets.sdist]
include = [
    "src/tcf",
    "hatch_build.py",
    "pyproject.toml",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "CITATION.cff",
]
exclude = [
    "/experiments",
    "/llm-benchmark",
    "/old",
    "/docs",
    "/datasets",
    "/scripts",
    "/tickets",
    "/tests",
    "/.claude",
    "/.github",
    "/config",
]

[dependency-groups]
dev = [
    "pip>=26.1.2",
    "setuptools>=82.0.1",
    "wheel>=0.47.0",
]

# v1.0 (2026-05-27, ADR-0017): canonico TCF-CORE vive em src/tcf/
# (OBAT + HCC + natures + pipeline). Wheel empacota src/tcf como modulo
# importavel `tcf`. Codigo v0.5 legado (columnar/RLE pra LLM benchmark)
# permanece em old/tcf/ mas NAO e' empacotado (acessorio historico).
# Sem [project.scripts]: v1.0 e' library-only (`from tcf import encode`);
# CLI do v0.5 (old/tcf/cli.py) nao migrado — fora de escopo v1.
# Future: C extension via hatchling-meson; Rust via maturin (mesmo layout).
